Frontend - Login, Register page done

--- a/client/src/components/register/Register.module.css
+++ b/client/src/components/register/Register.module.css
@@ -1,9 +1,9 @@
-.loginCont {
+.registerCont {
   position: relative;
   background-color: #fcd450;
   height: 100vh;
 }
-.loginSubCont {
+.registerSubCont {
   width: 37%;
   text-align: center;
   position: absolute;
