--- a/client/src/components/Dashboard/Dashboard.module.css
+++ b/client/src/components/Dashboard/Dashboard.module.css
@@ -1,12 +1,12 @@
 .dashboardCont {
   background-image: url(../../images/notes.jpg);
   height: 100vh;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
 }
 .headerText {
-  width: 37%;
   text-align: center;
   position: absolute;
   top: 50%;
